# Django-Vue3-Firebase

./: .env.example  .gitignore  docker-compose.yml  readme.md
backend/: backend.dockerfile  firebase.example.json  pyproject.toml
backend/api/: urls.py  views.py
backend/backend/: settings.py  urls.py
backend/movies/: models.py  serializers.py  urls.py  validators.py  views.py
backend/user/: admin.py  authentication.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
frontend/: .env.example  frontend.dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.vue  config.example.js
frontend/src/assets/: base.css
frontend/src/components/: navbar.vue  spinner.vue
frontend/src/components/auth/: deleteAccount.vue  login.vue  new-password.vue  register.vue  reset-password.vue
frontend/src/components/forms/: Button.vue  Input.vue  Label.vue  form-section.vue  section-title.vue
frontend/src/components/movies/: add_edit.vue  detail.vue  list.vue
frontend/src/router/: index.js
frontend/src/router/guest/: index.js
frontend/src/router/members/: index.js  movies.js
frontend/src/stores/: movies.store.js  users.store.js
frontend/src/utils/: cfetch.js
frontend/src/views/: HomeView.vue  ProfileView.vue
